--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "next14-starter",
+  "name": "focaposasia",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -15,8 +15,10 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "framer-motion": "^11.3.30",
     "husky": "^9.0.11",
     "next": "14.2.3",
+    "nextjs-toploader": "^1.6.12",
     "react": "^18",
     "react-dom": "^18"
   },
