--- a/package.json
+++ b/package.json
@@ -15,9 +15,14 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^5.19.0",
+    "bcrypt": "^5.1.1",
     "framer-motion": "^11.3.30",
     "husky": "^9.0.11",
+    "jsonwebtoken": "^9.0.2",
     "next": "14.2.3",
+    "next-auth": "^4.24.7",
     "nextjs-toploader": "^1.6.12",
     "react": "^18",
     "react-dom": "^18"
@@ -33,6 +38,7 @@
     "eslint-config-prettier": "^9.1.0",
     "postcss": "^8",
     "prettier": "3.2.5",
+    "prisma": "^5.19.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
