--- a/package.json
+++ b/package.json
@@ -18,12 +18,12 @@
     "@hookform/resolvers": "^3.9.0",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.19.0",
-    "@tanstack/react-query": "^5.55.0",
-    "@tanstack/react-query-devtools": "^5.55.0",
-    "@trpc/client": "^11.0.0-rc.502",
-    "@trpc/next": "^11.0.0-rc.502",
-    "@trpc/react-query": "^11.0.0-rc.502",
-    "@trpc/server": "^11.0.0-rc.502",
+    "@tanstack/react-query": "^4.29.14",
+    "@tanstack/react-query-devtools": "^4.29.14",
+    "@trpc/client": "^10.30.0",
+    "@trpc/next": "^10.30.0",
+    "@trpc/react-query": "^10.30.0",
+    "@trpc/server": "^10.30.0",
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "framer-motion": "^11.3.30",
