--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@trpc/server": "^10.30.0",
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "framer-motion": "^11.3.30",
     "husky": "^9.0.11",
     "jsonwebtoken": "^9.0.2",
@@ -36,6 +37,7 @@
     "yup": "^1.4.0"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
