--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
     "prepare": "husky install",
     "postinstall": "prisma generate"
   },
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts",
+    "seed:region": "ts-node -T ./prisma/seed-region.ts"
+  },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
     "@next-auth/prisma-adapter": "^1.0.7",
@@ -41,7 +45,7 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
-    "@types/node": "^20",
+    "@types/node": "^20.16.13",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@typescript-eslint/eslint-plugin": "^7.8.0",
@@ -56,7 +60,8 @@
     "react-hook-form": "^7.53.0",
     "superjson": "^2.2.1",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.6.3",
     "zod": "^3.23.8"
   }
 }
