--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
+    "react-number-format": "^5.4.2",
     "react-toastify": "^10.0.5",
     "yup": "^1.4.0"
   },
