--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "prisma": {
     "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts",
+    "seed:bank": "ts-node -T ./prisma/seed-bank.ts",
     "seed:region": "ts-node -T ./prisma/seed-region.ts"
   },
   "dependencies": {
@@ -35,6 +36,7 @@
     "framer-motion": "^11.3.30",
     "husky": "^9.0.11",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "next": "14.2.3",
     "nextjs-toploader": "^1.6.12",
     "react": "^18",
