--- a/package.json
+++ b/package.json
@@ -16,9 +16,7 @@
     "postinstall": "prisma generate"
   },
   "prisma": {
-    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts",
-    "seed:bank": "ts-node -T ./prisma/seed-bank.ts",
-    "seed:region": "ts-node -T ./prisma/seed-region.ts"
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
@@ -33,6 +31,7 @@
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
+    "crypto-js": "^4.2.0",
     "framer-motion": "^11.3.30",
     "husky": "^9.0.11",
     "jsonwebtoken": "^9.0.2",
@@ -48,6 +47,7 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
+    "@types/crypto-js": "^4.2.2",
     "@types/node": "^20.16.13",
     "@types/react": "^18",
     "@types/react-dom": "^18",
