--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@hookform/resolvers": "^3.9.0",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.19.0",
+    "@reduxjs/toolkit": "^2.3.0",
     "@tanstack/react-query": "^4.29.14",
     "@tanstack/react-query-devtools": "^4.29.14",
     "@trpc/client": "^10.30.0",
@@ -42,7 +43,9 @@
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "react-number-format": "^5.4.2",
+    "react-redux": "^9.1.2",
     "react-toastify": "^10.0.5",
+    "redux-persist": "^6.0.0",
     "yup": "^1.4.0"
   },
   "devDependencies": {
@@ -62,6 +65,7 @@
     "prisma": "^5.19.0",
     "react-hook-form": "^7.53.0",
     "superjson": "^2.2.1",
+    "tailwind-scrollbar": "^3.1.0",
     "tailwindcss": "^3.4.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3",
