--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-icons": "^5.3.0",
     "react-number-format": "^5.4.2",
     "react-redux": "^9.1.2",
+    "react-table": "^7.8.0",
     "react-toastify": "^10.0.5",
     "redux-persist": "^6.0.0",
     "yup": "^1.4.0"
@@ -54,6 +55,7 @@
     "@types/node": "^20.16.13",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-table": "^7.7.20",
     "@typescript-eslint/eslint-plugin": "^7.8.0",
     "eslint": "^8",
     "eslint-config-google": "^0.14.0",
