--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@reduxjs/toolkit": "^2.3.0",
     "@tanstack/react-query": "^4.29.14",
     "@tanstack/react-query-devtools": "^4.29.14",
+    "@tanstack/react-table": "^8.20.5",
     "@trpc/client": "^10.30.0",
     "@trpc/next": "^10.30.0",
     "@trpc/react-query": "^10.30.0",
@@ -38,6 +39,7 @@
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "next": "14.2.3",
+    "next-usequerystate": "^1.20.0",
     "nextjs-toploader": "^1.6.12",
     "react": "^18",
     "react-dom": "^18",
