add_category_done

--- a/package.json
+++ b/package.json
@@ -50,6 +50,8 @@
     "react-table": "^7.8.0",
     "react-toastify": "^10.0.5",
     "redux-persist": "^6.0.0",
+    "sweetalert2": "^11.14.5",
+    "sweetalert2-react-content": "^5.0.7",
     "yup": "^1.4.0"
   },
   "devDependencies": {
