--- a/package.json
+++ b/package.json
@@ -42,7 +42,9 @@
     "next": "14.2.3",
     "next-usequerystate": "^1.20.0",
     "nextjs-toploader": "^1.6.12",
+    "npm": "^10.9.1",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "react-number-format": "^5.4.2",
