--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   },
   "dependencies": {
+    "@emotion/styled": "^11.13.5",
     "@hookform/resolvers": "^3.9.0",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.19.0",
@@ -26,6 +27,11 @@
     "@tanstack/react-query": "^4.29.14",
     "@tanstack/react-query-devtools": "^4.29.14",
     "@tanstack/react-table": "^8.20.5",
+    "@tiptap/extension-link": "^2.10.3",
+    "@tiptap/extension-text-align": "^2.10.3",
+    "@tiptap/extension-underline": "^2.10.3",
+    "@tiptap/react": "^2.10.3",
+    "@tiptap/starter-kit": "^2.10.3",
     "@trpc/client": "^10.30.0",
     "@trpc/next": "^10.30.0",
     "@trpc/react-query": "^10.30.0",
@@ -46,6 +52,7 @@
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
+    "react-dropzone": "^14.3.5",
     "react-icons": "^5.3.0",
     "react-number-format": "^5.4.2",
     "react-redux": "^9.1.2",
