--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.19.0",
     "@reduxjs/toolkit": "^2.3.0",
+    "@supabase/supabase-js": "^2.46.2",
     "@tanstack/react-query": "^4.29.14",
     "@tanstack/react-query-devtools": "^4.29.14",
     "@tanstack/react-table": "^8.20.5",
